--- a/themes/rcforward/sass/_404.scss
+++ b/themes/rcforward/sass/_404.scss
@@ -1,28 +1,15 @@
 /*--------------------------------------------------------------
 # 404 Page
 --------------------------------------------------------------*/
-.error404{
-    .site-content {
-        padding:0;
-        max-width: 100%;
+.page-template-404{
+    .site-content{
+        background: url(../../assets/images/output-onlinepngtools.png);
+        width: 100%;
         height: 100vh;
-        section {
-            display: flex;
-            .page-content{
-                width: 50%;
-                h1{
-                    font-size: 30px;
-                }
-                p{
-                    font-size: 5rem;
-                }
-            }
-            .image-404{
-                width:50%
+        background-position: 10%;
+        background-repeat: no-repeat;
+    background-size: contain;
 
-        
-            }
+}
 
-        }
-    }
 }
