--- a/themes/rcforward/sass/_navigation.scss
+++ b/themes/rcforward/sass/_navigation.scss
@@ -4,6 +4,12 @@
 
 
 .main-navigation {
+  .menu-item-has-children {
+        position: relative;
+        > ul {
+          display: none;
+        }
+  }
   @include desktop{
     .menu-item-has-children {
         position: relative;
@@ -116,14 +122,16 @@
                 }
                 a {
                   color: $credible__blue;
+
                   @include desktop{
                     color: $white;
+                    padding:32px;
                     
                   }
-                }
-              }
-            }
-          }
+                }// a
+              }// li
+            }// .sub-menu
+          }// .menu-item
         }
       }
     }
