--- a/themes/rcforward/style.css
+++ b/themes/rcforward/style.css
@@ -249,6 +249,11 @@ a {
 .chimp-donate-form {
   background: #00BEA8; }
 
+.main-navigation .menu-item-has-children {
+  position: relative; }
+  .main-navigation .menu-item-has-children > ul {
+    display: none; }
+
 @media (min-width: 1000px) {
   .main-navigation .menu-item-has-children {
     position: relative; }
@@ -365,7 +370,8 @@ a {
               color: #14225F; }
               @media (min-width: 1000px) {
                 .site-header .header-container .main-navigation .menu-header-menu-container .menu .menu-item .sub-menu li a {
-                  color: #fff; } }
+                  color: #fff;
+                  padding: 32px; } }
 
 /*--------------------------------------------------------------
 # Accessibility
@@ -831,7 +837,9 @@ body {
   top: 50%;
   margin-top: -2px; }
 
-.hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
+.hamburger-inner,
+.hamburger-inner::before,
+.hamburger-inner::after {
   width: 40px;
   height: 4px;
   background-color: #fff;
@@ -846,8 +854,9 @@ body {
   -webkit-transition-timing-function: ease;
           transition-timing-function: ease; }
 
-.hamburger-inner::before, .hamburger-inner::after {
-  content: "";
+.hamburger-inner::before,
+.hamburger-inner::after {
+  content: '';
   display: block; }
 
 .hamburger-inner::before {
@@ -859,7 +868,9 @@ body {
 /*
    * Boring
    */
-.hamburger--boring .hamburger-inner, .hamburger--boring .hamburger-inner::before, .hamburger--boring .hamburger-inner::after {
+.hamburger--boring .hamburger-inner,
+.hamburger--boring .hamburger-inner::before,
+.hamburger--boring .hamburger-inner::after {
   -webkit-transition-property: none;
   transition-property: none; }
 
@@ -885,7 +896,9 @@ body {
       display: none; } }
 
 .menu-item-has-children::after {
-  content: "\f078";
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  content: '\f078';
   font-family: Font Awesome\ 5 Free;
   font-weight: 900;
   right: 2em;
@@ -897,25 +910,10 @@ body {
     .menu-item-has-children::after {
       display: none; } }
 
-.menu-item-has-children::before {
-  content: "\f077";
-  font-family: Font Awesome\ 5 Free;
-  display: none;
-  font-weight: 900;
-  right: 2em;
-  color: white;
-  top: 30%;
-  font-size: 24px;
-  position: absolute; }
-  @media (min-width: 1000px) {
-    .menu-item-has-children::before {
-      display: none; } }
-
-.rotate {
-  -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
-  -webkit-transition: .3s;
-  transition: .3s; }
+.menu-active::after {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+  top: 0; }
 
 * {
   -webkit-box-sizing: border-box;
@@ -1645,19 +1643,10 @@ ol.flickity-page-dots {
 /*--------------------------------------------------------------
 # 404 Page
 --------------------------------------------------------------*/
-.error404 .site-content {
-  padding: 0;
-  max-width: 100%;
-  height: 100vh; }
-  .error404 .site-content section {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex; }
-    .error404 .site-content section .page-content {
-      width: 50%; }
-      .error404 .site-content section .page-content h1 {
-        font-size: 30px; }
-      .error404 .site-content section .page-content p {
-        font-size: 5rem; }
-    .error404 .site-content section .image-404 {
-      width: 50%; }
+.page-template-404 .site-content {
+  background: url(../../assets/images/output-onlinepngtools.png);
+  width: 100%;
+  height: 100vh;
+  background-position: 10%;
+  background-repeat: no-repeat;
+  background-size: contain; }
