--- a/themes/rcforward/sass/_404.scss
+++ b/themes/rcforward/sass/_404.scss
@@ -3,13 +3,15 @@
 --------------------------------------------------------------*/
 .page-template-404{
     .site-content{
-        background: url(../../assets/images/output-onlinepngtools.png);
+        
         width: 100%;
         height: 100vh;
-        background-position: 10%;
-        background-repeat: no-repeat;
-    background-size: contain;
-
+        .content-404{
+            display:flex;
+            width:100%;
+            
+        }
+ 
 }
 
 }
