--- a/themes/rcforward/style.css
+++ b/themes/rcforward/style.css
@@ -1765,9 +1765,10 @@ ol.flickity-page-dots {
 # 404 Page
 --------------------------------------------------------------*/
 .page-template-404 .site-content {
-  background: url(../../assets/images/output-onlinepngtools.png);
   width: 100%;
-  height: 100vh;
-  background-position: 10%;
-  background-repeat: no-repeat;
-  background-size: contain; }
+  height: 100vh; }
+  .page-template-404 .site-content .content-404 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%; }
