add style for front page responsive

--- a/themes/rcforward/sass/_flickity.scss
+++ b/themes/rcforward/sass/_flickity.scss
@@ -4,7 +4,16 @@
 
 .main-carousel{
     // margin:2rem;
-    max-width: 880px;
+    max-width: 240px;
+    @include tablet{
+        max-width: 450px;
+    }
+    @include tablet-large{
+        max-width:650px;
+    }
+    @include desktop{
+    max-width: 900px;
+    }
     margin: 2rem auto;
 
 
@@ -37,18 +46,29 @@
 .flickity-prev-next-button {
     width:60px;
     height:60px;
+    background-color:transparent;
+    &:hover{
+        background-color:transparent;
+    }
     path{
         fill:lighten($innovative__purple, 30%);
         &:hover{
         fill:$innovative__purple;
+
         }
 
     }
     &.previous{
-        left:-60px;
+        left:-50px;
+        @include tablet{
+            left:-60px;
+        }
     }
     &.next{
-        right:-60px;    
+        right:-50px;
+        @include tablet{
+            right:-60px;
+        }   
     }
 }
 }
@@ -66,11 +86,25 @@ ol.flickity-page-dots{
 }
 .carousel-cell {
     @include box-shadow();
-    width: 23.5%; /* half-width */
+    width:98%;
+    margin: 0 9px;
+    @include tablet{
+        width:45%;
+        margin: 0 20px;
+    }
+    @include tablet-large{
+        width:28%;
+        margin: 0 19px;
+    }
+    @include desktop{
+        width: 23.5%; /* half-width */
+        margin: 0 8px;
+    }
     height: 230px;
-    margin: 0 5px;
+
     
     overflow: hidden;
+
    
     img{
         max-width: 100%;
@@ -106,17 +140,28 @@ ol.flickity-page-dots{
         margin-top:1.3rem;
         font-size: 0.8rem;  
         text-align: center;
+        padding:0 1rem;
+        .post-name{
+            display:block;
+            line-height:.8rem;
+        }
     }
 
 }
 .browse_charities_button{
-    margin: 7.5rem auto;
+    margin-top:7.5rem;
+    margin-bottom:2rem;
+    @include tablet{
+        margin-bottom:5rem;
+    }
     text-align: center;
     a{
         background:$code__blue;
         padding:1.1rem 1.5rem;
-        border-radius: 7px;
-
+        border-radius: 7px; 
     }
+}
+.browse-charity-subtitle{
+    font-weight:600;
 }
 
