--- a/themes/rcforward/sass/_content.scss
+++ b/themes/rcforward/sass/_content.scss
@@ -52,32 +52,22 @@ body {
   background: $credible__blue;
   color: $grounded__green;
   font-family: $montserrat__font;
+  @include font-size(0.9);
+  @include tablet{
+    @include font-size(1);
+  };
 }
 .site {
   max-width: $max-screen-size;
   margin: 0 auto;
   background: white;
 }
-.site-content {
-  @include tablet {
-    padding: 2rem;
-  }
-  @include desktop {
-    padding: 5rem;
-  }
-}
-<<<<<<< HEAD
-/* Chimp Donate Button */
-  .chimp-donate-form {
-        background: $code__blue;
-        margin-top: 10px;
-        width: 160px;
-        height: 60px;
-        border-radius: 6px;
-        color: $grounded__green;
-        font-weight: bold;
-      }
-=======
+// .site-content {
+//     padding: 1.5rem;
+//   @include desktop {
+//     padding: 3rem;
+//   }
+// }
 
 /* Chimp Donate Button */
 .chimp-donate-form {
@@ -93,4 +83,3 @@ body {
   @include desktop {
   }
 }
->>>>>>> c590575265e0bcd82d5845260c2817245a4e37b3
